@@ -1,12 +1,12 @@
-﻿=======================================
-tkBackup Backup and Restore Application
+=======================================
+tkBak Backup and Restore Application
 =======================================
 
 :Author: Konstas Marmatakis <marmako@gmail.com>
 
 .. |date| date::
 
-:Date: 2014-04-26
+:Date: 2014-05-12
 :Description: This is an application for backup and restore files.
 :Requirements: Requirements
 :INSTALL: Installation
@@ -34,7 +34,7 @@ How to start
 ------------
 On a terminal just type:
 
-- cd tkbackup
+- cd backup
 - python3 tkbak or chmod +x tkbak and ./tkbak for linux users.
 
 - python tkbak for windows users.
