@@ -4,13 +4,13 @@
 Version=1.0
 Type=Application
 Terminal=false
-Name[el_GR]=TkBackup
+Name[el_GR]=TkBak
 Exec=/usr/local/bin/tkbak
-Icon=/usr/share/icons/hicolor/48x48/apps/tkbackup.png
+Icon=/usr/share/icons/hicolor/48x48/apps/tkbak.png
 Comment[el_GR]=Εφαρμογή για την δημιουργία και συμπίεση εφεδρικών αντιγράφων.
 Comment=Application for zip and archive files and directories.
-Name=TkBackup
-GenericName[el_GR]=TkBackup
+Name=TkBak
+GenericName[el_GR]=TkBak
 Categories=Utility
 Terminal=false
 StartupNotify=false
