@@ -1,3 +1,7 @@
+2014-05-12 Konstas Marmatakis marmako@gmail.com
+	* setup.py: Improvements.
+	* Renamed tkbackup to tkbak all files and strings.
+
 2014-05-02 Konstas Marmatakis marmako@gmail.com
 	* setup.py: Improvements.
 	* tkbackup.desktop: Added.
